Orpie ChangeLog
------------------------------------------------------------------------

v1.5

   2004-09-09        Made a minor Makefile change to correct linking
                     errors under Gentoo (maybe others).

   2004-09-07        Support --sysconfdir configure option.  (Anyone
                     packaging for the filesystem hierarchy standard
                     will now need to use something like "./configure
                     --prefix=/usr --sysconfdir=/etc".)

   2004-09-03        Implemented entry of most fundamental physical 
                     constants.

   2004-08-31        Fixed incorrect error message regarding deprecated
                     extended_enter command.

v1.4

   2004-08-30        Version 1.4.0 release.
   
                     Started work on a testing framework for the
                     rpc_calc object.  (I'd really appreciate help
                     writing test cases--see calc_test.ml .)
   
                     Implemented matrix trace.

   2004-08-29        Integrated unit handling code.  Real and complex 
                     scalars and matrices can are now dimensioned
                     quantities.  Unit conversion and base
                     standardization operators were added.

                     When entering external data, the integer base 
                     separator character was changed from '_' to '`'.

   2004-08-27        Raising a negative real number to a noninteger
                     power now produces a complex value rather than
                     real-valued 'nan'.

   2004-08-23        Deprecated "extended_" operation identifiers in
                     favor of somewhat more clear "abbrev_" 
                     identifiers.

                     Added methods to include (i.e. source) rcfiles
                     within each other, remove key bindings, and remove
                     operation abbreviations.

   2004-07-19        Implemented automatic key bindings.
